--- a/EDD_Proyecto2/src/edd_proyecto2/IngresoCategoria.form
+++ b/EDD_Proyecto2/src/edd_proyecto2/IngresoCategoria.form
@@ -2,7 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -119,7 +119,7 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="lbCategoria">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Categoria"/>
+            <Property name="text" type="java.lang.String" value="Categoria Individual"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtCategoria">
