--- a/EDD_Proyecto2/src/edd_proyecto2/VentanaUsuario.form
+++ b/EDD_Proyecto2/src/edd_proyecto2/VentanaUsuario.form
@@ -77,6 +77,7 @@
                                       <Component id="btnPreorden" alignment="0" max="32767" attributes="0"/>
                                       <Component id="btnPostorden" alignment="0" max="32767" attributes="0"/>
                                       <Component id="btnInorden" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="btnHashReporte" max="32767" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="jScrollPane1" min="-2" pref="590" max="-2" attributes="0"/>
@@ -124,6 +125,8 @@
                           <Component id="btnPreorden" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="btnPostorden" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Component id="btnHashReporte" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
                           <Component id="btnVerLibros" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="105" max="-2" attributes="0"/>
@@ -231,6 +234,14 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnInordenActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnHashReporte">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Usuarios "/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnHashReporteActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
