eliminacion en AVL tipo BB

--- a/EDD_Proyecto2/src/edd_proyecto2/IngresoCategoria.form
+++ b/EDD_Proyecto2/src/edd_proyecto2/IngresoCategoria.form
@@ -67,7 +67,11 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="txtCategoria" min="-2" pref="165" max="-2" attributes="0"/>
+                                      <Group type="102" attributes="0">
+                                          <Component id="txtCategoria" min="-2" pref="165" max="-2" attributes="0"/>
+                                          <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+                                          <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                                      </Group>
                                       <Component id="txtRutaJSON" min="-2" pref="343" max="-2" attributes="0"/>
                                       <Component id="btnRegistroMasivo" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
@@ -91,6 +95,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lbCategoria" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
                       <Component id="txtCategoria" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
+                      <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -169,6 +174,14 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Nombre del archivo "/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="jButton1">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="jButton1"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
